changed project links 2 behance,changed icecream graphic,fixed alignment

--- a/work.css
+++ b/work.css
@@ -183,6 +183,15 @@ header .w3-right:hover {
   flex: 1 1 200px;
 }
 
+div.panel:nth-child(2) {
+ margin-bottom: 32px;
+}
+
+div.panel:nth-child(3) {
+ margin-bottom: 32px;
+}
+
+
 .tall-row {
   grid-row-end: span 2;
 }
@@ -235,10 +244,30 @@ img {
       font-size: 1.3em;
     }
   }
+
+  @media (max-width: 1033px){
+    div.panel:nth-child(2) {
+     margin-bottom: 32px;
+    }
+
+    div.panel:nth-child(3) {
+     margin-bottom: 10px;
+    }
+  }
+
+  @media (max-width: 690px){
+    div.panel:nth-child(2) {
+     margin-bottom: 10px;
+    }
+
+    div.panel:nth-child(3) {
+     margin-bottom: 10px;
+    }
+  }
+
   @media (min-width: 601px) and (max-width: 1344px) {
 
     .w3-bar {
-   padding-right: 10px;
-  }
-
+      padding-right: 10px;
+    }
   }
